--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
 
-<h2>Team Member</h2>
+<h2>Team Members</h2>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td><b> <a href="https://kfmei.page/", target="_blank"> Kangfu Mei</a></b>, Ph.D. Student, Johns Hopkins University.</td></tr> 
@@ -302,13 +302,45 @@
 <h4>Conference Papers</h4></table>
 <table id="tbPublications" width="100%">
 
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
+		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
+		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
+		<a href="#", target="_blank">[Paper]</a>
+        <a href="#", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ACMMM.jpeg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
+		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
+		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
+		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[Paper]</a>
+        <a href="#", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
     <tr>	
 		<td width="206">
 		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><a href="paper/ICCVW_AIM_2019.pdf" target="_blank">HighEr-Resolution Network for Image Demosaicing and Enhancing</a><br>
 		Kangfu Mei, <b>Juncheng Li</b>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang.
-		<p><em>IInternational Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
+		<p><em>International Conference on Computer Vision Workshop</em> (<i><b>ICCV Workshop</b></i>), 2019. <br>
 		<font color="red">AIM2019 Winner</font><br> 
 		<a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
