--- a/index_zw.html
+++ b/index_zw.html
@@ -298,6 +298,38 @@
 
 <h4>会议论文</h4></table>
 <table id="tbPublications" width="100%">
+
+		<tr>	
+		<td width="206">
+		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
+		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
+		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
+		<a href="#", target="_blank">[论文]</a>
+        <a href="#", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/ACMMM.jpeg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
+		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
+		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
+		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[论文]</a>
+        <a href="#", target="_blank">[代码]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
     <tr>	
 		<td width="206">
 		<img src="./indexpics/HERN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
