--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<h3> Postdoctoral Fellow </h3>
 				<p>
-					Center for Mathematical Artificial Intelligence (CMAI), Department of Mathematics,<br>
+					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, Department of Mathematics,<br>
 					Shatin, New Territories, Hong Kong.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
@@ -208,7 +208,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 443] [Highest Citation: 252] [Total IF: 53.364] [Accepted: 19]</h3>
+<h3>[Total Citations: 443] [Highest Citation: 252] [Accepted: 19]</h3>
 <h3>Accepted: ICCV, ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
 <h3>Under Review: TIP, TCSVT, TCYB, etc.</h3>
 <h4>Journal Papers</h4>
@@ -310,6 +310,7 @@
 		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
+		<font color="red">Top computer vision conference.</font><br>
 		<a href="#", target="_blank">[Paper]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
@@ -326,6 +327,7 @@
 		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
+		<font color="red">Top multimedia conference.</font><br>
 		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[Paper]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
@@ -379,7 +381,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">Top CV conference. The most popular paper. 228 stars and 51 forks in Github.</font><br>
+		<font color="red">Top computer vision conference. The most popular paper. 228 stars and 51 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
