--- a/index_zw.html
+++ b/index_zw.html
@@ -36,7 +36,7 @@
 
 				<h3> 博后研究员 </h3>
 				<p>
-					数学人工智能研究中心（CMAI），数学系<br>
+					<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>，数学系<br>
 					沙田，新界，香港.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
@@ -202,7 +202,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 442] [最高引用: 253] [总影响因子: 53.364] [接收论文: 19]</h3>
+<h3>[总引用: 442] [最高引用: 253] [接收论文: 19]</h3>
 <h3>已接收: ICCV、ECCV、 TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
 <h3>审稿中: TIP、TCSVT、TCYB 等。</h3>
 <h4>期刊论文</h4>
@@ -307,6 +307,7 @@
 		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
+		<font color="red">计算机顶级会议。</font><br>
 		<a href="#", target="_blank">[论文]</a>
         <a href="#", target="_blank">[代码]</a>
 		</td>
@@ -323,6 +324,7 @@
 		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
+		<font color="red">多媒体顶级会议。</font><br>
 		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[论文]</a>
         <a href="#", target="_blank">[代码]</a>
 		</td>
