--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 				<h3> Postdoctoral Fellow </h3>
 				<p>
 					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, Department of Mathematics,<br>
+					The Chinese University of Hong Kong,<br>
 					Shatin, New Territories, Hong Kong.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
