--- a/index_zw.html
+++ b/index_zw.html
@@ -36,7 +36,8 @@
 
 				<h3> 博后研究员 </h3>
 				<p>
-					<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>，数学系<br>
+					<a href="http://cmai.math.cuhk.edu.hk/index.html">数学人工智能研究中心（CMAI）</a>，数学系，<br>
+					香港中文大学，<br>
 					沙田，新界，香港.<br>
 					<br>
 					ORCID: 0000-0001-7314-6754<br>
