--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
 				<h3> Postdoctoral Fellow </h3>
 				<p>
-					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, Department of Mathematics,<br>
+					<a href="http://cmai.math.cuhk.edu.hk/index.html">Center for Mathematical Artificial Intelligence (CMAI)</a>, <br>
+					Department of Mathematics,<br>
 					The Chinese University of Hong Kong,<br>
 					Shatin, New Territories, Hong Kong.<br>
 					<br>
