--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
 
 <h2>Biography</h2>
 <p>
-	I am a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong. I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>.
+	I am a Postdoctoral Fellow at the Center for Mathematical Artificial Intelligence, The Chinese University of Hong Kong, co-advised by <b> Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</a> and Prof. <a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a></b>.
+</p>
+
+<p>
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>.
 </p>
 
 <p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction).</p>
