--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#Equal Contribution. SCI-1.</font><br> 
+		<font color="red">#Equal Contribution. Guided by me. SCI-1.</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[Code]</a>
 		</td>
@@ -300,7 +300,7 @@
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
 		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang, Aiwen Jiang, Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#Equal Contribution. SCI-1.</font><br> 
+		<font color="red">#Equal Contribution. Guided by me. SCI-1.</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -316,7 +316,7 @@
 		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
-		<font color="red">Top computer vision conference.</font><br>
+		<font color="red">Top computer vision conference. Guided by me.</font><br>
 		<a href="#", target="_blank">[Paper]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
@@ -333,7 +333,7 @@
 		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
-		<font color="red">Top multimedia conference.</font><br>
+		<font color="red">Top multimedia conference. Guided by me.</font><br>
 		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[Paper]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
