--- a/index_zw.html
+++ b/index_zw.html
@@ -176,14 +176,8 @@
 </table>
 
 
-<h2>研究经历</h2>
+<h2>科研经历</h2>
 <ul>
-	<li>
-		<div style="text-align:left">香港中文大学, 香港 </div> <div style="float:right; text-align:right">即将到来</div>
-		职位: 博士后研究员<br>
-		研究内容: 图像/视频压缩、医学图像重建、图像复原<br>
-		主管: <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">曾铁勇</a>教授和<a href="http://lokminglui.com/", target="_blank">Ronald Lok Ming LUI</a>教授<br>
-	</li>
 	<li>
 		<div style="text-align:left">深圳大学, 深圳 </div> <div style="float:right; text-align:right">2020.12.11--2021.01.30</div>
 		职位: 研究助理<br>
