--- a/index.html
+++ b/index.html
@@ -109,41 +109,41 @@
 <h3>2021-Now, 6 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper has been accepted by ICCV 2021.</td></tr> 
-		<tr><td>One paper has been accepted by ACM MM 2021.</td></tr> 
-		<tr><td>One paper has been accepted by IEEE TMM 2021.</td></tr> 
-		<tr><td>One paper has been accepted by PR 2021.</td></tr> 
-		<tr><td>One paper has been accepted by IEEE TMM 2021.</td></tr> 
-		<tr><td>One paper has been accepted by ICME 2021.</td></tr> 	
+		<tr><td>One paper is accepted by ICCV 2021.</td></tr> 
+		<tr><td>One paper is accepted by ACM MM 2021.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
+		<tr><td>One paper is accepted by PR 2021.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TMM 2021.</td></tr> 
+		<tr><td>One paper is accepted by ICME 2021.</td></tr> 	
 	</tbody>
 </table>
 
 <h3>2020-2021, 5 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper has been accepted by IEEE TCSVT 2020.</td></tr> 
-		<tr><td>One paper has been accepted by IEEE TMM 2020.</td></tr> 
-		<tr><td>One paper has been accepted by IEEE Access 2021.</td></tr> 
-		<tr><td>One paper has been accepted by IEEE TNNLS 2020.</td></tr> 
-		<tr><td>One paper has been accepted by IEEE TIP 2020.</td></tr> 	
+		<tr><td>One paper is accepted by IEEE TCSVT 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TMM 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE Access 2021.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TNNLS 2020.</td></tr> 
+		<tr><td>One paper is accepted by IEEE TIP 2020.</td></tr> 	
 	</tbody>
 </table>
 
 <h3>2019-2020, 4 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Three papers have been accepted by ICCV Workshop 2019.</td></tr> 
-		<tr><td>One paper has been accepted by IET Image Processing 2019.</td></tr> 	
+		<tr><td>Three papers are accepted by ICCV Workshop 2019.</td></tr> 
+		<tr><td>One paper is accepted by IET Image Processing 2019.</td></tr> 	
 	</tbody>
 </table>
 
 <h3>2018-2019, 4 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>One paper has been accepted by ICONIP 2018.</td></tr> 
-		<tr><td>One paper has been accepted by ACCV 2018.</td></tr> 
-		<tr><td>One paper has been accepted by ECCV 2018.</td></tr> 
-		<tr><td>One paper has been accepted by CVPR Workshop 2018.</td></tr> 	
+		<tr><td>One paper is accepted by ICONIP 2018.</td></tr> 
+		<tr><td>One paper is accepted by ACCV 2018.</td></tr> 
+		<tr><td>One paper is accepted by ECCV 2018.</td></tr> 
+		<tr><td>One paper is accepted by CVPR Workshop 2018.</td></tr> 	
 	</tbody>
 </table>
 
