--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 		<tr><td>One paper has been submitted to IEEE TCYB.</td></tr> 
 		<tr><td>One paper has been submitted to IEEE TIP.</td></tr> 
 		<tr><td>One paper has been submitted to IEEE TCSVT.</td></tr> 
+		<tr><td>One paper has been submitted to IEEE TII.</td></tr> 
 	</tbody>
 </table>
 
@@ -208,9 +209,9 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 448] [Highest Citation: 254] [Accepted: 19]</h3>
-<h3>Accepted: ICCV, ECCV, TNNLS, TIP, TCSVT, TMM, PR, ACMMM, CVPRW, ICCVW, ICME, ACCV, etc.</h3>
-<h3>Under Review: TIP, TCSVT, TCYB, etc.</h3>
+<h3>[Total Citations: 451] [Highest Citation: 256] [Accepted: 19]</h3>
+<h3>Accepted Conference: ICCV, ECCV, ACMMM, CVPRW, ICCVW, ICME, ACCV, ICONIP.</h3>
+<h3>Accepted Journal: TNNLS, TIP, TCSVT, TMM, PR, Access, IET Image Processing.</h3>
 <h4>Journal Papers</h4>
 <table id="tbPublications" wßidth="100%">
 	<tbody>
@@ -307,11 +308,11 @@
 		<td width="206">
 		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
+		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">Top computer vision conference. Guided by me.</font><br>
-		<a href="#", target="_blank">[Paper]</a>
+		<a href="paper/ICCV_2021.pdf", target="_blank">[Paper]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
 	</tr>
@@ -324,11 +325,11 @@
 		<td width="206">
 		<img src="./indexpics/ACMMM.jpeg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
+		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
 		<font color="red">Top multimedia conference. Guided by me.</font><br>
-		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[Paper]</a>
+		<a href="paper/ACMMM_2021.pdf", target="_blank">[Paper]</a>
         <a href="#", target="_blank">[Code]</a>
 		</td>
 	</tr>
@@ -489,6 +490,9 @@
 <h2>Meeting &amp; Visiting (2016.9-Now)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> <em>Postdoctoral Fellow</em>, The Chinese University of Hong Kong, Hong Kong, China, 2021.</td>
+		</tr>
 		<tr>
 			<td> <em>Research Assistant</em>, Shenzhen University, Shenzhen, China, 2020.</td>
 		</tr>
