--- a/index_zw.html
+++ b/index_zw.html
@@ -96,6 +96,7 @@
 		<tr><td>一篇论文已经提交到 IEEE TCYB.</td></tr> 
 		<tr><td>一篇论文已经提交到 IEEE TIP.</td></tr> 
 		<tr><td>一篇论文已经提交到 IEEE TCSVT.</td></tr> 
+		<tr><td>一篇论文已经提交到 IEEE TII.</td></tr> 
 	</tbody>
 </table>
 
@@ -201,9 +202,9 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 448] [最高引用: 254] [接收论文: 19]</h3>
-<h3>已接收: ICCV、ECCV、 TNNLS、TIP、TCSVT、TMM、PR、ACMMM、CVPRW、ICCVW、ICME、ACCV等。</h3>
-<h3>审稿中: TIP、TCSVT、TCYB 等。</h3>
+<h3>[总引用: 451] [最高引用: 256] [接收论文: 19]</h3>
+<h3>接收的会议: ICCV, ECCV, ACMMM, CVPRW, ICCVW, ICME, ACCV, ICONIP.</h3>
+<h3>接收的期刊: TNNLS, TIP, TCSVT, TMM, PR, Access, IET Image Processing.</h3>
 <h4>期刊论文</h4>
 <table id="tbPublications" width="100%">
 	<tbody>
@@ -303,11 +304,11 @@
 		<td width="206">
 		<img src="./indexpics/ICCV2021.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="#" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
+		<td><a href="paper/ICCV_2021.pdf" target="_blank">Structure-Preserving Deraining with Residue Channel Prior Guidance</a><br>
 		Qiaosi Yi, <b>Juncheng Li</b>, Qinyan Dai, Faming Fang, Guixu Zhang1g, and Tieyong Zeng.
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">计算机顶级会议。由我指导。</font><br>
-		<a href="#", target="_blank">[论文]</a>
+		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
         <a href="#", target="_blank">[代码]</a>
 		</td>
 	</tr>
@@ -320,11 +321,11 @@
 		<td width="206">
 		<img src="./indexpics/ACMMM.jpeg" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://arxiv.org/pdf/2106.00985.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
+		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang, and Guixu Zhang1g.
 		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
 		<font color="red">多媒体顶级会议。由我指导。</font><br>
-		<a href="https://arxiv.org/pdf/2106.00985.pdf", target="_blank">[论文]</a>
+		<a href="paper/ACMMM_2021.pdf", target="_blank">[论文]</a>
         <a href="#", target="_blank">[代码]</a>
 		</td>
 	</tr>
@@ -485,6 +486,9 @@
 <h2>参会 &amp; 参观 (2016.9-现在)</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> <em>博后研究员</em>, 香港中文大学, 香港, 中国, 2021.</td>
+		</tr>
 		<tr>
 			<td> <em>研究助理</em>, 深圳大学, 深圳, 中国, 2020.</td>
 		</tr>
