--- a/index.html
+++ b/index.html
@@ -506,46 +506,46 @@
 			<td> National Defense University, Changsha, China, 2020.</td>
 		</tr>
 		<tr>
-			<td> CSIAM-2020, Changsha, China, 2020.</td>
+			<td> <font color="red">CSIAM-2020</font>, Changsha, China, 2020.</td>
 		</tr>
         <tr>
-			<td> PRCV-2020, Nanjing, China, 2020.</td>
+			<td> <font color="red">PRCV-2020</font>, Nanjing, China, 2020.</td>
 		</tr>
 		<tr>
-			<td> SCF-2020, Shanghai, China, 2019.</td>
+			<td> <font color="red">SCF-2020</font>, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> NeurlPS-Shanghai, Shanghai, China, 2019.</td>
+			<td> <font color="red">NeurlPS-Shanghai</font>, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
 			<td> Ewha Womans University, Seoul, Korea, 2019.</td>
 		</tr>
 		<tr>
-			<td> ICCV-2019, Seoul, Korea, 2019.</td>
+			<td> <font color="red">ICCV-2019</font>, Seoul, Korea, 2019.</td>
 		</tr>
 		<tr>
-			<td> YouKu-VSRE-2019, Hanzhou, China, 2019.</td>
+			<td> <font color="red">YouKu-VSRE-2019</font>, Hanzhou, China, 2019.</td>
 		</tr>
 		<tr>
 			<td> <em>Research Assistant</em>, The Chinese University of Hong Kong, Hong Kong, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> RAMIDS-2019, Shanghai Jiao Tong University, Shanghai, China, 2019.</td>
+			<td> <font color="red">RAMIDS-2019</font>, Shanghai Jiao Tong University, Shanghai, China, 2019.</td>
 		</tr>
 		<tr>
 			<td> University of Science and Technology of China, Hefei, China, 2019.</td>
 		</tr>
 		<tr>
-			<td> VALSE-2019, Hefei, China, 2019.</td>
+			<td> <font color="red">VALSE-2019</font>, Hefei, China, 2019.</td>
 		</tr>
 		<tr>
 			<td> Technical University of Munich, Munich, Germany, 2018.</td>
 		</tr>
 		<tr>
-			<td> ECCV-2018, Munich, Germany, 2018.</td>
+			<td> <font color="red">ECCV-2018</font>, Munich, Germany, 2018.</td>
 		</tr>
 		<tr>
-			<td> ECCV Pre-Conference, Tencent, Shenzhen, China, 2018.</td>
+			<td> <font color="red">ECCV Pre-Conference</font>, Tencent, Shenzhen, China, 2018.</td>
 		</tr>
 		<tr>
 			<td> Macao Polytechnic Institut, Macao, China, 2018.</td>
@@ -569,28 +569,28 @@
 			<td> <em>Research Assistant</em>, The Chinese University of Hong Kong, Hong Kong, China, 2018.</td>
 		</tr>
 		<tr>
-			<td> AWS Reinvent, Shanghai, China, 2018.</td>
+			<td> <font color="red">AWS Reinvent</font>, Shanghai, China, 2018.</td>
 		</tr>
 		<tr>
-			<td> MICS-2017, Shanghai Jiao Tong University, Shanghai, China, 2017.</td>
+			<td> <font color="red">MICS-2017</font>, Shanghai Jiao Tong University, Shanghai, China, 2017.</td>
 		</tr>
 		<tr>
-			<td> FLAIR-2017, Shanghai, China, 2017.</td>
+			<td> <font color="red">FLAIR-2017</font>, Shanghai, China, 2017.</td>
 		</tr>
 		<tr>
-			<td> VALSE-2017, Xiamen University, Xiamen, China, 2017.</td>
+			<td> <font color="red">VALSE-2017</font>, Xiamen University, Xiamen, China, 2017.</td>
 		</tr>
 		<tr>
-			<td> Tianyuan Class, Zhejiang University, Hanzhou, China, 2017.</td>
+			<td> <font color="red">Tianyuan Class</font>, Zhejiang University, Hanzhou, China, 2017.</td>
 		</tr>
 		<tr>
-			<td> ROS Class, East China University, Shanghai, China, 2017.</td>
+			<td> <font color="red">ROS Class</font>, East China University, Shanghai, China, 2017.</td>
 		</tr>
 		<tr>
-			<td> MLA-2016, Nanjing University, Nanjing, China, 2016.</td>
+			<td> <font color="red">MLA-2016</font>, Nanjing University, Nanjing, China, 2016.</td>
 		</tr>
 		<tr>
-			<td> Youth Vision Seminar, ShanghaiTech University, Shanghai, China, 2016.</td>
+			<td> <font color="red">Youth Vision Seminar</font>, ShanghaiTech University, Shanghai, China, 2016.</td>
 		</tr>
 		<tr>
 			<td> Fudan University, Shanghai, China, 2016.</td>
