--- a/index_zw.html
+++ b/index_zw.html
@@ -502,46 +502,46 @@
 			<td> 国防科技大学, 长沙, 中国, 2020.</td>
 		</tr>
 		<tr>
-			<td> 中国工业与应用数学学会第十八届年会（CSIAM）, 长沙, 中国, 2020.</td>
+			<td> <font color="red">中国工业与应用数学学会第十八届年会（CSIAM）</font>, 长沙, 中国, 2020.</td>
 		</tr>
         <tr>
-			<td> 中国模式识别与计算机视觉学术会议, 南京, 中国, 2020.</td>
+			<td> <font color="red">中国模式识别与计算机视觉学术会议</font>, 南京, 中国, 2020.</td>
 		</tr>
 		<tr>
-			<td> 智慧地球研讨会, 上海, 中国, 2019.</td>
+			<td> <font color="red">智慧地球研讨会</font>, 上海, 中国, 2019.</td>
 		</tr>
 		<tr>
-			<td> NeurlPS-上海站, 上海, 中国, 2019.</td>
+			<td> <font color="red">NeurlPS-上海站</font>, 上海, 中国, 2019.</td>
 		</tr>
 		<tr>
 			<td> 梨花女子大学, 首尔, 韩国, 2019.</td>
 		</tr>
 		<tr>
-			<td> 国际计算机视觉大会（ICCV）, 首尔, 韩国, 2019.</td>
+			<td> <font color="red">国际计算机视觉大会（ICCV）</font>, 首尔, 韩国, 2019.</td>
 		</tr>
 		<tr>
-			<td> 优酷-视频增强和超分辨率挑战赛, 杭州, 中国, 2019.</td>
+			<td> <font color="red">优酷-视频增强和超分辨率挑战赛</font>, 杭州, 中国, 2019.</td>
 		</tr>
 		<tr>
 			<td> <em>研究助理</em>, 香港中文大学, 香港, 中国, 2019.</td>
 		</tr>
 		<tr>
-			<td> 数字图像及数据科学最新进展研讨会, 上海交通大学, 上海, 中国, 2019.</td>
+			<td> <font color="red">数字图像及数据科学最新进展研讨会</font>, 上海交通大学, 上海, 中国, 2019.</td>
 		</tr>
 		<tr>
 			<td> 中国科学技术大学, 合肥, 中国, 2019.</td>
 		</tr>
 		<tr>
-			<td> 视觉与学习青年学者研讨会（VALSE）, 合肥, 中国, 2019.</td>
+			<td> <font color="red">视觉与学习青年学者研讨会（VALSE）</font>, 合肥, 中国, 2019.</td>
 		</tr>
 		<tr>
 			<td> 慕尼黑工业大学, 慕尼黑, 德国, 2018.</td>
 		</tr>
 		<tr>
-			<td> 欧洲计算机视觉大会（ECCV）, 慕尼黑, 德国, 2018.</td>
+			<td> <font color="red">欧洲计算机视觉大会（ECCV）</font>, 慕尼黑, 德国, 2018.</td>
 		</tr>
 		<tr>
-			<td> ECCV-预演会议, 腾讯, 深圳, 中国, 2018.</td>
+			<td> <font color="red">ECCV-预演会议</font>, 腾讯, 深圳, 中国, 2018.</td>
 		</tr>
 		<tr>
 			<td> 澳门理工学院, 澳门, 中国, 2018.</td>
@@ -565,28 +565,28 @@
 			<td> <em>研究助理</em>, 香港中文大学, 香港, 中国, 2018.</td>
 		</tr>
 		<tr>
-			<td> AWS-数据全球峰会, 上海, 中国, 2018.</td>
+			<td> <font color="red">AWS-数据全球峰会</font>, 上海, 中国, 2018.</td>
 		</tr>
 		<tr>
-			<td> 医学图像计算青年研讨会（MICS）, 上海交通大学, 上海, 中国, 2017.</td>
+			<td> <font color="red">医学图像计算青年研讨会（MICS）</font>, 上海交通大学, 上海, 中国, 2017.</td>
 		</tr>
 		<tr>
-			<td> 人工智能海内外博士生论坛（FLAIR）, 上海, 中国, 2017.</td>
+			<td> <font color="red">人工智能海内外博士生论坛（FLAIR）</font>, 上海, 中国, 2017.</td>
 		</tr>
 		<tr>
-			<td> 视觉与学习青年学者研讨会（VALSE）, 厦门大学, 厦门, 中国, 2017.</td>
+			<td> <font color="red">视觉与学习青年学者研讨会（VALSE）</font>, 厦门大学, 厦门, 中国, 2017.</td>
 		</tr>
 		<tr>
-			<td> 天元基金医学图像处理讲习班, 浙江大学, 杭州, 中国, 2017.</td>
+			<td> <font color="red">天元基金医学图像处理讲习班</font>, 浙江大学, 杭州, 中国, 2017.</td>
 		</tr>
 		<tr>
-			<td> 机器人暑期培训班, 华东师范大学, 上海, 中国, 2017.</td>
+			<td> <font color="red">机器人暑期培训班</font>, 华东师范大学, 上海, 中国, 2017.</td>
 		</tr>
 		<tr>
-			<td> 中国机器学习及其应用研讨会（MLA）, 南京大学, 南京, 中国, 2016.</td>
+			<td> <font color="red">中国机器学习及其应用研讨会（MLA）</font>, 南京大学, 南京, 中国, 2016.</td>
 		</tr>
 		<tr>
-			<td> 青年视觉研讨会, 上海科技大学, 上海, 中国, 2016.</td>
+			<td> <font color="red">青年视觉研讨会</font>, 上海科技大学, 上海, 中国, 2016.</td>
 		</tr>
 		<tr>
 			<td> 复旦大学, 上海, 中国, 2016.</td>
