--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 </p>
 
 <p>
-	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>.
+	I received the Ph.D. degree from the School of Computer Science and Technology, East China Normal University (ECNU), China, in 2021, co-advised by Prof. <b>Guixu Zhang</b> and Prof. <b>Faming Fang</b>.
 </p>
 
 <p>My research interests include artificial intelligence and its applications to computer vision (e.g., image stitching, image segmentation, and crowd counting) and image processing (e.g., image super-resolution, image denoising, image dehazing, and medical image reconstruction).</p>
@@ -82,13 +82,12 @@
 
 
 
-<h2>Team Members</h2>
+<h2>Collaborators</h2>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td><b> <a href="https://kfmei.page/", target="_blank"> Kangfu Mei</a></b>, Ph.D. Student, Johns Hopkins University.</td></tr> 
 		<tr><td><b> <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank"> Qiaosi Yi</a></b>, Master Student, East China Normal University.</td></tr> 
 		<tr><td><b> <a href="", target="_blank"> Qinyan Dai</a></b>, Master Student, East China Normal University.</td></tr> 
-		<tr><td><b> <a href="", target="_blank"> Le Hu</a></b>, Ph.D. Student, East China Normal University.</td></tr> 
 	</tbody>
 </table>
 
@@ -96,7 +95,7 @@
 
 <h2>News</h2>
 
-<h3>Submit List, 4 Papers</h3>
+<h3>Submit List, 5 Papers</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>One paper has been submitted to IEEE TCSVT.</td></tr> 
@@ -209,7 +208,7 @@
 
 
 <h2>Selected Publications </h2>
-<h3>[Total Citations: 452] [Highest Citation: 257] [Accepted: 19]</h3>
+<h3>[Total Citations: 457] [Highest Citation: 259] [Accepted: 19]</h3>
 <h3>Accepted Conference: ICCV, ECCV, ACMMM, CVPRW, ICCVW, ICME, ACCV, ICONIP.</h3>
 <h3>Accepted Journal: TNNLS, TIP, TCSVT, TMM, PR, Access, IET Image Processing.</h3>
 <h4>Journal Papers</h4>
@@ -313,7 +312,7 @@
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">Top computer vision conference. Guided by me.</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[Paper]</a>
-        <a href="#", target="_blank">[Code]</a>
+        <a href="https://github.com/Joyies/SPDNet", target="_blank">[Code]</a>
 		</td>
 	</tr>
 	<tr></tr>
