--- a/index_zw.html
+++ b/index_zw.html
@@ -70,26 +70,25 @@
 </p>
 
 <p>
-	我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由<b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank">张桂戌 </a></b>教授 和 <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">方发明 </a></b>教授共同指导。
+	我于2021年在华东师范大学计算机科学与技术学院取得博士学位，由<b>张桂戌</b>教授 和 <b>方发明</b>教授共同指导。
 </p>
 
 <p>我的研究兴趣包括人工智能及其在计算机视觉（例如：图像拼接，图像分割, 人群计数）和图像处理（例如：图像超分辨率，图像去噪, 图像去雾和医学图像重建）中的应用。</p>
 
 <p>该网站用于记录我的研究成果，也用于记录我的生活经历。</p>
 
-<h2>团队成员</h2>
+<h2>密切合作者</h2>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td><b> <a href="https://kfmei.page/", target="_blank"> 梅康夫</a></b>, 博士研究生, 霍普金斯大学.</td></tr> 
 		<tr><td><b> <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank"> 易侨斯</a></b>, 硕士研究生, 华东师范大学.</td></tr> 
 		<tr><td><b> <a href="", target="_blank"> 戴沁妍</a></b>, 硕士研究生, 华东师范大学.</td></tr> 
-		<tr><td><b> <a href="", target="_blank"> 胡乐</a></b>, 博士研究生, 华东师范大学.</td></tr> 
 	</tbody>
 </table>
 
 <h2>最新消息</h2>
 
-<h3>提交列表，共4篇</h3>
+<h3>提交列表，共5篇</h3>
 <table style="border-spacing:2px">
 	<tbody>
 		<tr><td>一篇论文已经提交到 IEEE TCSVT.</td></tr> 
@@ -202,7 +201,7 @@
 
 
 <h2>精选出版物 </h2>
-<h3>[总引用: 452] [最高引用: 257] [接收论文: 19]</h3>
+<h3>[总引用: 457] [最高引用: 259] [接收论文: 19]</h3>
 <h3>接收的会议: ICCV, ECCV, ACMMM, CVPRW, ICCVW, ICME, ACCV, ICONIP.</h3>
 <h3>接收的期刊: TNNLS, TIP, TCSVT, TMM, PR, Access, IET Image Processing.</h3>
 <h4>期刊论文</h4>
@@ -309,7 +308,7 @@
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">计算机顶级会议。由我指导。</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
-        <a href="#", target="_blank">[代码]</a>
+        <a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
 		</td>
 	</tr>
 	<tr></tr>
