--- a/projects/ECCV2018_MSRN/index.html
+++ b/projects/ECCV2018_MSRN/index.html
@@ -174,7 +174,7 @@ var _hmt = _hmt || [];
 <font size="3">
 @InProceedings{li2018multi,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {Multi-scale residual network for image super-resolution},<br>
-&nbsp;&nbsp;&nbsp;&nbsp;author = {Li, Juncheng and Fang, Faming and Mei, Kangfu and Zhang, Guixu},<br>
+&nbsp;&nbsp;&nbsp;&nbsp;author = {Li Juncheng, Fang Faming, Mei Kangfu, and Zhang Guixu},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {Proceedings of the European Conference on Computer Vision (ECCV)},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;pages = {517--532},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;year = {2018}<br>
