--- a/projects/ICCVW2019_SRRFN/index.html
+++ b/projects/ICCVW2019_SRRFN/index.html
@@ -197,7 +197,7 @@ var _hmt = _hmt || [];
 <font size="3">
 @InProceedings{Li_2019_ICCV_Workshops,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {Lightweight and Accurate Recursive Fractal Network for Image Super-Resolution},<br>
-&nbsp;&nbsp;&nbsp;&nbsp;author = {Li, Juncheng and Yuan, Yiting and Mei, Kangfu and Fang, Faming},<br>
+&nbsp;&nbsp;&nbsp;&nbsp;author = {Li Juncheng, Yuan Yiting, Mei Kangfu, and Fang Faming},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {The IEEE International Conference on Computer Vision (ICCV) Workshops},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;year = {2019},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;pages = {3814-3823}<br>
