--- a/projects/TCSVT2020_MDCN/index.html
+++ b/projects/TCSVT2020_MDCN/index.html
@@ -186,7 +186,7 @@ var _hmt = _hmt || [];
 <font size="3">
 @InProceedings{li2020mdcn,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {MDCN: Multi-scale Dense Cross Network for Image Super-Resolution},<br>
-&nbsp;&nbsp;&nbsp;&nbsp;author = {Li, Juncheng and Fang, Faming and Li, Jiaqian and Mei, Kangfu and Zhang, Guixu},<br>
+&nbsp;&nbsp;&nbsp;&nbsp;author = {Li Juncheng, Fang Faming, Li Jiaqian, Mei Kangfu, and Zhang Guixu},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {IEEE Transactions on Circuits and Systems for Video Technology},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;year = {2020},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;publisher = {IEEE}<br>
