--- a/projects/TIP2020_SEANET/index.html
+++ b/projects/TIP2020_SEANET/index.html
@@ -49,7 +49,7 @@ var _hmt = _hmt || [];
 <h1>Soft-edge Assisted Network for Single Image Super-Resolution</h1>
 <h3>
 	<font size="3"><b>Faming Fang</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="https://junchenglee.com/" target="_blank"><font size="3"><b>Juncheng Li</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="https://junchenglee.com/" target="_blank"><font size="3"><b>Juncheng Li</b></font></a><sup><font size="2">1*</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<font size="3">Tieyong Zeng</font><sup><font size="2">2</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 </h3>
 
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Author names alphabetically &nbsp;&nbsp;&nbsp;&nbsp; Contact us: cvjunchengli@gmail.con</font></a></b>
+	<b><a><font size="3"> Author names alphabetically, * First contributor &nbsp;&nbsp;&nbsp;&nbsp; Contact us: cvjunchengli@gmail.con</font></a></b>
 
 <br>
 <br>&nbsp;
@@ -186,7 +186,7 @@ var _hmt = _hmt || [];
 <font size="3">
 @InProceedings{fang2020soft,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {Soft-Edge Assisted Network for Single Image Super-Resolutionn},<br>
-&nbsp;&nbsp;&nbsp;&nbsp;author = {Fang, Faming and Li, Juncheng and Zeng, Tieyong},<br>
+&nbsp;&nbsp;&nbsp;&nbsp;author = {Fang Faming, Li Juncheng, and Zeng Tieyong},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {IEEE Transactions on Image Processing},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;volume = {29},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;pages = {4656--4668},<br>
