--- a/projects/TNNLS2020_MLEFGN/index.html
+++ b/projects/TNNLS2020_MLEFGN/index.html
@@ -49,7 +49,7 @@ var _hmt = _hmt || [];
 <h1>Multi-level Edge Features Guided Network for Image Denoising</h1>
 <h3>
 	<font size="3"><b>Faming Fang</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="https://junchenglee.com/" target="_blank"><font size="3"><b>Juncheng Li</b></font></a><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
+	<a href="https://junchenglee.com/" target="_blank"><font size="3"><b>Juncheng Li</b></font></a><sup><font size="2">1*</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<font size="3">Yiting Yuan</font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<font size="3">Tieyong Zeng</font><sup><font size="2">2</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
 	<font size="3">Guixu Zhang</font><sup><font size="2">1</font></sup>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -62,7 +62,7 @@ var _hmt = _hmt || [];
 
 <br>
 <br>&nbsp;
-	<b><a><font size="3"> Author names alphabetically &nbsp;&nbsp;&nbsp;&nbsp; Contact us: cvjunchengli@gmail.con</font></a></b>
+	<b><a><font size="3"> Author names alphabetically, *First contributor &nbsp;&nbsp;&nbsp;&nbsp; Contact us: cvjunchengli@gmail.con</font></a></b>
 
 <br>
 <br>&nbsp;
@@ -216,7 +216,7 @@ interference factors; (2). It is extremely difficult to obtain clear and accurat
 <font size="3">
 @InProceedings{fang2020multi,<br>
 &nbsp;&nbsp;&nbsp;&nbsp;title = {Multi-level Edge Features Guided Network for Image Denoising},<br>
-&nbsp;&nbsp;&nbsp;&nbsp;author = {Fang, Faming and Li, Juncheng, Yuan Yiting, Zeng, Tieyong, and Zhang Guixu},<br>
+&nbsp;&nbsp;&nbsp;&nbsp;author = {Fang Faming, Li Juncheng, Yuan Yiting, Zeng Tieyong, and Zhang Guixu},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;booktitle = {IEEE Transactions on Neural Networks and Learning Systems},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;year = {2020},<br>
 &nbsp;&nbsp;&nbsp;&nbsp;publisher = {IEEE}<br>
