--- a/index_zw.html
+++ b/index_zw.html
@@ -308,7 +308,8 @@
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">计算机顶级会议。由我指导。</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[论文]</a>
-        <a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
+		<a href="https://github.com/Joyies/SPDNet", target="_blank">[代码]</a>
+		<a href="https://junchenglee.com/projects/ICCV2021_SPDNet", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
