--- a/index.html
+++ b/index.html
@@ -312,7 +312,8 @@
 		<p><em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2021. <br>
 		<font color="red">Top computer vision conference. Guided by me.</font><br>
 		<a href="paper/ICCV_2021.pdf", target="_blank">[Paper]</a>
-        <a href="https://github.com/Joyies/SPDNet", target="_blank">[Code]</a>
+		<a href="https://github.com/Joyies/SPDNet", target="_blank">[Code]</a>
+		<a href="https://junchenglee.com/projects/ICCV2021_SPDNet", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
