--- a/projects/ICCV2021_SPDNet/index.html
+++ b/projects/ICCV2021_SPDNet/index.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 <hr/>
 <table align="center">
 <tr>
-	<td align="center"><img border=0 width=600 src="RCP".png"></td>
+	<td align="center"><img border=0 width=600 src="RCP.png"></td>
 </tr>
 </table>
 <p><font size="4" face="Palatino Linotype">Recently, convolutional neural networks (CNN) have
@@ -106,19 +106,29 @@ var _hmt = _hmt || [];
 <tr>
 	<td align="center"><img border=0 width=900 src="SPDNet.png"></td>
 </tr>
+</table>
 
+
+<br>
 <h3><p><font size="6"><b>WMLM</b></font></p></h2>
 <hr/>
+<table align="center">
 <tr>
 	<td align="center"><img border=0 width=600 src="WMLM.png"></td>
 </tr>
+</table>
 
+
+<br>
 <h3><p><font size="6"><b>IFM</b></font></p></h2>
 <hr/>
+<table align="center">
 <tr>
 	<td align="center"><img border=0 width=600 src="IFM.png"></td>
 </tr>
 </table>
+
+
 
 <br>
 <h2><p><font size="6"><b>Visual Results</b></font></p></h2>
